--- a/.eslintrc
+++ b/.eslintrc
@@ -2,8 +2,7 @@
   "env": {
     "browser": true,
     "node": true,
-    "es6": true,
-    "jest": true
+    "es6": true
   },
   "parser": "@typescript-eslint/parser",
   "plugins": ["prettier", "eslint-plugin-import"],
@@ -27,5 +26,5 @@
       }
     ],
     "prettier/prettier": "error"
-  },
+  }
 }
