--- a/package.json
+++ b/package.json
@@ -29,12 +29,10 @@
     "e2e": "ng e2e",
     "lint": "NODE_ENV=test npm-run-all --parallel lint:*",
     "lint:angular": "ng lint",
-    "lint:js": "eslint \"src/**/*.{js,ts}\"",
     "lint:format": "prettier \"src/**/*.{md,html,json,yaml,yml}\" --check",
     "lint:type-check": "tsc --noEmit",
     "fix": "npm-run-all --sequential fix:*",
     "fix:angular": "ng lint --fix",
-    "fix:js": "eslint \"src/**/*.{js,ts}\" --fix",
     "fix:format": "prettier \"src/**/*.{md,html,json,yaml,yml}\" --write",
     "depcheck": "npx npm-check --update",
     "release:version": "standard-version -t @phantom/angular\\@",
@@ -63,9 +61,14 @@
     "@angular/cli": "~9.1.9",
     "@angular/compiler-cli": "^9.1.11",
     "@angular/language-service": "~9.1.11",
+    "@babel/preset-env": "^7.16.0",
+    "@babel/preset-typescript": "^7.16.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
+    "@typescript-eslint/eslint-plugin": "^5.3.0",
+    "@typescript-eslint/parser": "^5.3.0",
+    "browser-env": "^3.3.0",
     "codelyzer": "^5.2.1",
     "gitbook-cli": "^2.3.2",
     "jasmine-core": "~2.99.1",
@@ -76,13 +79,15 @@
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "ng-packagr": "^9.0.0",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^2.4.1",
     "protractor": "~5.4.0",
     "sass": "^1.26.9",
     "semantic-git-commit-cli": "^3.7.0",
     "standard-version": "^8.0.0",
     "ts-node": "~7.0.0",
     "tsickle": "^0.38.0",
-    "tslint": "~5.11.0",
+    "tslint": "^5.11.0",
     "typescript": "^3.8.3"
   }
 }
