Set ng test to watch false

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "build:types": "tsc --emitDeclarationOnly",
     "commit": "semantic-git-commit",
     "prepublishOnly": "npm run build",
-    "test": "ng test",
+    "test": "ng test --watch false",
+    "test:watch": "ng test",
     "e2e": "ng e2e",
     "lint": "NODE_ENV=test npm-run-all --parallel lint:*",
     "lint:angular": "ng lint",
