Add basic setup from private repo (#1)
- Adds the clipboard and testing modules

--- a/package.json
+++ b/package.json
@@ -1,63 +1,93 @@
 {
-  "name": "@phntms/PACKAGE-NAME",
+  "name": "@phntms/angular-lib",
   "description": "Description, same as overview one-liner from README.md.",
-  "version": "0.0.1",
-  "author": "Paulo Ferreira Jorge (paulo.jorge@phntms.com)",
+  "version": "0.0.10",
+  "author": "Josua Pedersen (josua@phntms.com)",
   "license": "MIT",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
-  "homepage": "https://github.com/phantomstudios/PACKAGE-NAME#readme",
+  "homepage": "https://github.com/phantomstudios/angular-lib#readme",
   "repository": {
     "type": "git",
-    "url": "https://github.com/phantomstudios/PACKAGE-NAME.git"
+    "url": "https://github.com/phantomstudios/angular-lib.git"
   },
   "bugs": {
-    "url": "https://github.com/phantomstudios/PACKAGE-NAME/issues"
+    "url": "https://github.com/phantomstudios/angular-lib/issues"
+  },
+  "engines": {
+    "node": ">=10.13.0"
   },
   "keywords": [
     "angular"
   ],
   "scripts": {
-    "build": "tsc",
+    "build": "ng build",
     "build:types": "tsc --emitDeclarationOnly",
+    "commit": "semantic-git-commit",
     "prepublishOnly": "npm run build",
-    "test": "jest --verbose",
-    "test:watch": "jest --verbose --watch",
-    "coverage": "jest --coverage",
+    "test": "ng test --watch false",
+    "test:watch": "ng test",
     "lint": "NODE_ENV=test npm-run-all --parallel lint:*",
     "lint:angular": "ng lint",
-    "lint:js": "eslint \"src/**/*.{js,ts}\"",
     "lint:format": "prettier \"src/**/*.{md,html,json,yaml,yml}\" --check",
     "lint:type-check": "tsc --noEmit",
     "fix": "npm-run-all --sequential fix:*",
     "fix:angular": "ng lint --fix",
-    "fix:js": "eslint \"src/**/*.{js,ts}\" --fix",
     "fix:format": "prettier \"src/**/*.{md,html,json,yaml,yml}\" --write",
-    "depcheck": "npx npm-check --update"
+    "depcheck": "npx npm-check --update",
+    "release:version": "standard-version -t @phantom/angular\\@",
+    "release:build": "npm run build",
+    "release:publish-npm": "npm publish dist/angular-lib",
+    "publish": "npm run release:version & npm run release:build && npm run release:publish-npm"
   },
   "dependencies": {
+    "@angular/animations": "~9.1.11",
     "@angular/cdk": "^9.2.4",
     "@angular/common": "~9.1.11",
     "@angular/compiler": "~9.1.11",
-    "@angular/core": "~9.1.11"
+    "@angular/core": "~9.1.11",
+    "@angular/forms": "~9.1.11",
+    "@angular/platform-browser": "~9.1.11",
+    "@angular/platform-browser-dynamic": "~9.1.11",
+    "@angular/router": "~9.1.11",
+    "core-js": "^2.5.4",
+    "rxjs": "~6.5.4",
+    "tslib": "^1.10.0",
+    "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.4.5",
-    "@babel/preset-typescript": "^7.3.3",
-    "@types/jest": "^26.0.20",
-    "@typescript-eslint/eslint-plugin": "^4.15.2",
-    "@typescript-eslint/parser": "^4.15.2",
-    "babel-eslint": "^10.1.0",
-    "babel-jest": "^26.0.1",
-    "browser-env": "^3.2.6",
-    "eslint": "^7.20.0",
-    "eslint-config-prettier": "^8.0.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-prettier": "^3.3.1",
-    "jest": "^26.0.1",
+    "@angular-devkit/build-angular": "~0.901.9",
+    "@angular-devkit/build-ng-packagr": "~0.901.9",
+    "@angular/cli": "~9.1.9",
+    "@angular/compiler-cli": "^9.1.11",
+    "@angular/language-service": "~9.1.11",
+    "@babel/preset-env": "^7.16.0",
+    "@babel/preset-typescript": "^7.16.0",
+    "@types/jasmine": "~2.8.8",
+    "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
+    "@typescript-eslint/eslint-plugin": "^5.3.0",
+    "@typescript-eslint/parser": "^5.3.0",
+    "browser-env": "^3.3.0",
+    "codelyzer": "^5.2.1",
+    "gitbook-cli": "^2.3.2",
+    "jasmine-core": "~2.99.1",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~3.0.0",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-coverage-istanbul-reporter": "^2.0.6",
+    "karma-jasmine": "~1.1.2",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "ng-packagr": "^9.0.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.2.1",
-    "ts-jest": "^26.1.0",
-    "typescript": "^4.1.5"
+    "prettier": "^2.4.1",
+    "protractor": "~5.4.0",
+    "sass": "^1.26.9",
+    "semantic-git-commit-cli": "^3.7.0",
+    "standard-version": "^8.0.0",
+    "ts-node": "~7.0.0",
+    "tsickle": "^0.38.0",
+    "tslint": "^5.11.0",
+    "typescript": "^3.8.3"
   }
 }
