--- a/src/safe-pipe/tsconfig-build.json
+++ b/src/safe-pipe/tsconfig-build.json
@@ -1,11 +1,9 @@
 {
   "extends": "tsconfig.ts",
-  "files": [
-    "index.ts",
-  ],
+  "files": ["index.ts"],
   "angularCompilerOptions": {
     "flatModuleOutFile": "index.js",
-    "flatModuleId": "@phantom/angular/safe-pipe",
+    "flatModuleId": "@phntms/angular-lib/safe-pipe",
     "skipTemplateCodegen": true,
     "fullTemplateTypeCheck": true
   }
