Reference window module like a third-party

--- a/src/share/tsconfig-build.json
+++ b/src/share/tsconfig-build.json
@@ -3,7 +3,7 @@
   "files": ["index.ts"],
   "angularCompilerOptions": {
     "flatModuleOutFile": "index.js",
-    "flatModuleId": "@phantom/angular/share",
+    "flatModuleId": "@phntms/angular-lib/share",
     "skipTemplateCodegen": true,
     "fullTemplateTypeCheck": true
   }
