--- a/src/window/tsconfig-build.json
+++ b/src/window/tsconfig-build.json
@@ -3,7 +3,7 @@
   "files": ["index.ts"],
   "angularCompilerOptions": {
     "flatModuleOutFile": "index.js",
-    "flatModuleId": "@phantom/angular/window",
+    "flatModuleId": "@phntms/angular-lib/window",
     "skipTemplateCodegen": true,
     "fullTemplateTypeCheck": true
   }
