Remove mention of @phantom/angular

--- a/src/scroll/tsconfig-build.json
+++ b/src/scroll/tsconfig-build.json
@@ -3,7 +3,7 @@
   "files": ["index.ts"],
   "angularCompilerOptions": {
     "flatModuleOutFile": "index.js",
-    "flatModuleId": "@phantom/angular/scroll",
+    "flatModuleId": "@phntms/angular-lib/scroll",
     "skipTemplateCodegen": true,
     "fullTemplateTypeCheck": true
   }
