--- a/package.json
+++ b/package.json
@@ -67,7 +67,9 @@
     "@typescript-eslint/parser": "^5.3.0",
     "browser-env": "^3.3.0",
     "codelyzer": "^5.2.1",
+    "eslint": "^8.2.0",
     "gitbook-cli": "^2.3.2",
+    "inquirer": "^6.5.2",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~3.0.0",
@@ -85,6 +87,6 @@
     "ts-node": "~7.0.0",
     "tsickle": "^0.38.0",
     "tslint": "^5.11.0",
-    "typescript": "^3.8.3"
+    "typescript": "^3.7.7"
   }
 }
