--- a/package.json
+++ b/package.json
@@ -23,8 +23,6 @@
   "scripts": {
     "build": "ng build",
     "build:types": "tsc --emitDeclarationOnly",
-    "commit": "semantic-git-commit",
-    "prepublishOnly": "npm run build",
     "test": "ng test --watch false",
     "test:watch": "ng test",
     "lint": "NODE_ENV=test npm-run-all --parallel lint:*",
@@ -34,19 +32,14 @@
     "fix": "npm-run-all --sequential fix:*",
     "fix:angular": "ng lint --fix",
     "fix:format": "prettier \"src/**/*.{md,html,json,yaml,yml}\" --write",
-    "depcheck": "npx npm-check --update",
-    "release:version": "standard-version -t @phntms/angular-lib\\@",
-    "release:build": "npm run build",
-    "release:publish-npm": "npm publish dist/angular-lib",
-    "publish": "npm run release:version & npm run release:build && npm run release:publish-npm"
+    "depcheck": "npx npm-check --update"
   },
   "dependencies": {
-    "@angular/animations": "~9.1.11",
+    "@angular/animations": "^9.1.11",
     "@angular/cdk": "^9.2.4",
     "@angular/common": "~9.1.11",
     "@angular/compiler": "~9.1.11",
     "@angular/core": "~9.1.11",
-    "@angular/forms": "~9.1.11",
     "@angular/platform-browser": "~9.1.11",
     "@angular/platform-browser-dynamic": "~9.1.11",
     "@angular/router": "~9.1.11",
@@ -61,16 +54,17 @@
     "@angular/cli": "~9.1.9",
     "@angular/compiler-cli": "^9.1.11",
     "@angular/language-service": "~9.1.11",
-    "@babel/preset-env": "^7.16.0",
-    "@babel/preset-typescript": "^7.16.0",
     "@types/jasmine": "~2.8.8",
-    "@types/jasminewd2": "~2.0.3",
+    "@types/jasminewd2": "^2.0.10",
     "@types/node": "^12.11.1",
-    "@typescript-eslint/eslint-plugin": "^5.3.0",
-    "@typescript-eslint/parser": "^5.3.0",
+    "@typescript-eslint/eslint-plugin": "^5.3.1",
+    "@typescript-eslint/parser": "^5.3.1",
     "browser-env": "^3.3.0",
     "codelyzer": "^5.2.1",
-    "gitbook-cli": "^2.3.2",
+    "eslint": "^8.2.0",
+    "fibers": "^3.1.0",
+    "html-webpack-plugin": "^4.5.2",
+    "inquirer": "^6.5.2",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~3.0.0",
@@ -79,15 +73,14 @@
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "ng-packagr": "^9.0.0",
+    "node-sass": "^4.14.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.4.1",
     "protractor": "~5.4.0",
-    "sass": "^1.26.9",
-    "semantic-git-commit-cli": "^3.7.0",
-    "standard-version": "^8.0.0",
+    "sass": "^1.43.4",
     "ts-node": "~7.0.0",
     "tsickle": "^0.38.0",
     "tslint": "^5.11.0",
-    "typescript": "^3.8.3"
+    "typescript": "^3.7.7"
   }
 }
