--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,6 +39,6 @@ jobs:
           node-version: 10
           registry-url: https://registry.npmjs.org/
       - run: npm ci
-      - run: npm publish --access=public
+      - run: npm publish --access=public dist/angular-lib
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
