Add build step to publish (#28)

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,7 +38,9 @@ jobs:
         with:
           node-version: 10
           registry-url: https://registry.npmjs.org/
-      - run: npm ci
+      - run: |
+          npm ci
+          npm run build --if-present
       - run: npm publish --access=public dist/angular-lib
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
