--- a/package.json
+++ b/package.json
@@ -35,25 +35,25 @@
     "depcheck": "npx npm-check --update"
   },
   "dependencies": {
-    "@angular/animations": "^9.1.13",
-    "@angular/cdk": "^9.2.4",
-    "@angular/common": "~9.1.13",
-    "@angular/compiler": "~9.1.13",
-    "@angular/core": "~9.1.13",
-    "@angular/platform-browser": "~9.1.13",
-    "@angular/platform-browser-dynamic": "~9.1.13",
-    "@angular/router": "~9.1.13",
+    "@angular/animations": "^10.2.5",
+    "@angular/cdk": "^10.2.7",
+    "@angular/common": "~10.2.5",
+    "@angular/compiler": "~10.2.5",
+    "@angular/core": "~10.2.5",
+    "@angular/platform-browser": "~10.2.5",
+    "@angular/platform-browser-dynamic": "~10.2.5",
+    "@angular/router": "~10.2.5",
     "core-js": "^2.5.4",
     "rxjs": "~6.5.4",
-    "tslib": "^1.10.0",
+    "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.901.9",
-    "@angular-devkit/build-ng-packagr": "^0.901.15",
-    "@angular/cli": "~9.1.9",
-    "@angular/compiler-cli": "^9.1.11",
-    "@angular/language-service": "~9.1.11",
+    "@angular-devkit/build-angular": "~0.1002.4",
+    "@angular-devkit/build-ng-packagr": "^0.1002.4",
+    "@angular/cli": "~10.2.4",
+    "@angular/compiler-cli": "^10.2.5",
+    "@angular/language-service": "~10.2.5",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "^2.0.10",
     "@types/node": "^12.11.1",
@@ -64,21 +64,21 @@
     "eslint": "^8.2.0",
     "html-webpack-plugin": "^4.5.2",
     "inquirer": "^6.5.2",
-    "jasmine-core": "~2.99.1",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.0.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "^2.0.6",
-    "karma-jasmine": "~1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "ng-packagr": "^9.0.0",
+    "jasmine-core": "~3.5.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~5.0.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
+    "ng-packagr": "^10.1.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.4.1",
-    "protractor": "~5.4.0",
+    "protractor": "~7.0.0",
     "sass": "^1.43.4",
     "ts-node": "~7.0.0",
-    "tslint": "^5.11.0",
-    "tsickle": "^0.38.0",
-    "typescript": "^3.7.7"
+    "tslint": "~6.1.0",
+    "tsickle": "^0.40.0",
+    "typescript": "^4.0.8"
   }
 }
