--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compileOnSave": false,
   "compilerOptions": {
     "target": "es2015",
-    "module": "esnext",
+    "module": "es2020",
     "moduleResolution": "node",
     "lib": [
       "dom",
