--- a/package.json
+++ b/package.json
@@ -46,11 +46,10 @@
     "core-js": "^2.5.4",
     "rxjs": "~6.5.4",
     "tslib": "^2.8.1",
-    "zone.js": "~0.11.8"
+    "zone.js": "^0.13.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.2.11",
-    "@angular-devkit/build-ng-packagr": "^0.901.15",
     "@angular/cli": "^15.2.11",
     "@angular/compiler-cli": "^15.2.10",
     "@angular/language-service": "^15.2.10",
@@ -60,7 +59,6 @@
     "@typescript-eslint/eslint-plugin": "^5.3.1",
     "@typescript-eslint/parser": "^5.3.1",
     "browser-env": "^3.3.0",
-    "codelyzer": "^5.2.1",
     "eslint": "^8.2.0",
     "fibers": "^3.1.0",
     "html-webpack-plugin": "^4.5.2",
@@ -79,7 +77,6 @@
     "protractor": "~7.0.0",
     "sass": "^1.43.4",
     "ts-node": "~7.0.0",
-    "tsickle": "^0.40.0",
     "tslint": "^6.1.3",
     "typescript": "^4.6.4"
   }
