--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@phntms/angular-lib",
   "description": "Description, same as overview one-liner from README.md.",
   "version": "1.0.1",
-  "author": "Josua Pedersen (josua@phntms.com)",
+  "author": "Josua Pedersen (josua@phantom.agency)",
   "license": "MIT",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
