--- a/package.json
+++ b/package.json
@@ -32,49 +32,41 @@
     "depcheck": "npx npm-check --update"
   },
   "dependencies": {
-    "@angular/animations": "^15.2.10",
-    "@angular/cdk": "^15.2.9",
-    "@angular/common": "^15.2.10",
-    "@angular/compiler": "^15.2.10",
-    "@angular/core": "^15.2.10",
-    "@angular/platform-browser": "^15.2.10",
-    "@angular/platform-browser-dynamic": "^15.2.10",
-    "@angular/router": "^15.2.10",
-    "core-js": "^2.5.4",
-    "rxjs": "~6.5.4",
-    "tslib": "^2.8.1",
-    "zone.js": "^0.13.3"
+    "@angular/animations": "^19.2.10",
+    "@angular/cdk": "^19.2.15",
+    "@angular/common": "^19.2.10",
+    "@angular/compiler": "^19.2.10",
+    "@angular/core": "^19.2.10",
+    "@angular/platform-browser": "^19.2.10",
+    "@angular/platform-browser-dynamic": "^19.2.10",
+    "@angular/router": "^19.2.10",
+    "core-js": "^3.42.0",
+    "rxjs": "^7.8.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.2.11",
-    "@angular/cli": "^15.2.11",
-    "@angular/compiler-cli": "^15.2.10",
-    "@angular/language-service": "^15.2.10",
-    "@types/jasmine": "~2.8.8",
-    "@types/jasminewd2": "^2.0.10",
-    "@types/node": "^12.11.1",
-    "@typescript-eslint/eslint-plugin": "^5.3.1",
-    "@typescript-eslint/parser": "^5.3.1",
-    "browser-env": "^3.3.0",
-    "eslint": "^8.2.0",
-    "fibers": "^3.1.0",
-    "html-webpack-plugin": "^4.5.2",
-    "inquirer": "^6.5.2",
-    "jasmine-core": "~2.99.1",
-    "jasmine-spec-reporter": "~4.2.1",
+    "@angular-devkit/build-angular": "^19.2.11",
+    "@angular/cli": "^19.2.11",
+    "@angular/compiler-cli": "^19.2.10",
+    "@angular/language-service": "^19.2.10",
+    "@types/jasmine": "~5.1.8",
+    "@types/jasminewd2": "^2.0.13",
+    "@types/node": "^22.15.17",
+    "@typescript-eslint/eslint-plugin": "^8.32.0",
+    "@typescript-eslint/parser": "^8.32.0",
+    "eslint": "^9.26.0",
+    "jasmine-core": "~5.7.1",
+    "jasmine-spec-reporter": "~7.0.0",
     "karma": "~6.4.4",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "^2.0.6",
-    "karma-jasmine": "~1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "ng-packagr": "^15.2.2",
-    "node-sass": "^4.14.1",
+    "karma-chrome-launcher": "~3.2.0",
+    "karma-coverage-istanbul-reporter": "^3.0.3",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "^2.1.0",
+    "ng-packagr": "^19.2.2",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.4.1",
-    "protractor": "~7.0.0",
-    "sass": "^1.43.4",
-    "ts-node": "~7.0.0",
-    "tslint": "^6.1.3",
-    "typescript": "^4.6.4"
+    "prettier": "^3.5.3",
+    "sass": "^1.88.0",
+    "ts-node": "~10.9.2",
+    "tslib": "^2.8.1",
+    "typescript": "^5.8.3"
   }
 }
