--- a/package.json
+++ b/package.json
@@ -23,12 +23,10 @@
     "test": "ng test --watch false",
     "test:watch": "ng test",
     "lint": "NODE_ENV=test npm-run-all --parallel lint:*",
-    "lint:angular": "ng lint",
-    "lint:format": "prettier \"src/**/*.{md,html,json,yaml,yml}\" --check",
+    "lint:format": "prettier \"src/**/*.{md,html,json,yaml,yml,ts}\" --check",
     "lint:type-check": "tsc --noEmit",
     "fix": "npm-run-all --sequential fix:*",
-    "fix:angular": "ng lint --fix",
-    "fix:format": "prettier \"src/**/*.{md,html,json,yaml,yml}\" --write",
+    "fix:format": "prettier \"src/**/*.{md,html,json,yaml,yml,ts}\" --write",
     "depcheck": "npx npm-check --update"
   },
   "dependencies": {
@@ -61,6 +59,7 @@
     "karma-coverage-istanbul-reporter": "^3.0.3",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "^2.1.0",
+    "karma-typescript": "^5.5.4",
     "ng-packagr": "^19.2.2",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.5.3",
